DashboardController separated from home, refactoring